namespace MartinFowler.Refactoring.Theatre.v4
{
    public struct Performance
    {
        public string playId;
        public int audience;
    }
}