namespace MartinFowler.Refactoring.Theatre.v9
{
    public class Invoice
    {
        public string customer;
        public Performance[] performances;
    }
}