@startuml
title v7
center header Refactoring | Theatre
'''''''''''''
allowmixing
'''''''''''''

enum PlayType{
    Tragedy
    Comedy
}

class Performance{
    +playId: string
    +audience: int
    
    +play: Play
    +amount: int
    +volumeCredits: int
}

class Invoice{
    +customer: string
    +performances: Performance[]
}

class Play{
    +playID: string
    +name: string
    +type: PlayType
}

#class StatementDataCreation <<Static>>{
    #Create(invoice: Invoice, plays: Dictionary): StatementData
    
    -EnrichPerformance((aPerformance: Performance): Performance <<local>>
    -AmountFor(aPerformance: Performance): int <<local>>
    -PlayFor(aPerformance: Performance): int <<local>>
    -VolumeCreditsFor(aPerformance: Performance): int <<local>>
    -TotalVolumeCredits(): int <<local>>
    -TotalAmount(): int <<local>>
}

#class StatementData{
    +invoiceCustomer: string
    +performances: Performance[]
    
    +totalAmount: int
    +TotalVolumeCredits: int
}

class BillPrinter{
    +Statement(invoice: Invoice, plays: Dictionary): string 
    -RenderPlainText(data: StatementData): string
    
    +StatementHtml(invoice: Invoice, plays: Dictionary): string 
    -RenderHtml(data: StatementData): string
    
    -USD(aNumber: float): string <<local>>
}

'''''''''''''

Play --> PlayType
Invoice *-- "0..*" Performance

Performance *-- "1" Play

StatementDataCreation --> StatementData

BillPrinter ..> StatementDataCreation
BillPrinter ..> StatementData

BillPrinter ..> Invoice
BillPrinter ..> Play
BillPrinter ..> PlayType : switch

'''''''''''''
'''''''''''''
caption Splitting the phases of calculation and formatting
right footer (CC-BY) RGV, 2021
@enduml